Updated home page and other pages

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@ layout: default
 title: Home Page
 ---
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-12 border-bottom">
         <h1 class="display-4">Hi, I am Anuraj</h1>
-        <p class="lead pb-3">With a rich background spanning 18 years, I am an architect specializing in Microsoft
+        <p class="lead pb-3 lh-lg">
+            <img src="/assets/me.png" class="img-fluid float-end ms-4 mb-3 rounded-circle" alt="Anuraj Profile" />
+            With a rich background spanning 18 years, I am an architect specializing in Microsoft
             technologies. Holding the esteemed title of Microsoft MVP and being a certified Azure Developer, I actively
-            contribute to the community as a frequent speaker at Microsoft User Group meetings and conferences. I've
-            authored a book titled <a rel="noopener" target="_blank" href="https://via.anuraj.dev/book">A Developer's
-                Guide to .NET in Azure</a> published by Packt Publishing. As a co-founder, I play a key role in leading
-            the <a rel="noopener" target="_blank" href="https://k-mug.net">Kerala Microsoft User Group</a> and Kochi
-            Azure Developer Community.
-            Presently, I serve as the Chief Technology Officer at <a rel="noopener" target="_blank"
-                href="https://socxo.com">Socxo Solutions Pvt.
-                Ltd</a></p>
+            contribute to the community as a frequent speaker at Microsoft User Group meetings and conferences.
+        </p>
+        <p class="lead pb-3 lh-lg">
+            I've authored a book titled <a rel="noopener" target="_blank" href="https://via.anuraj.dev/book">A
+                Developer's
+                Guide to .NET in Azure</a> published by Packt Publishing. Presently, I serve as the Chief Technology
+            Officer at <a rel="noopener" target="_blank" href="https://socxo.com">Socxo Solutions Pvt.
+                Ltd</a>.
+        </p>
         <p>
 
         <div class="d-flex gap-2 mb-3">
@@ -49,8 +52,5 @@ title: Home Page
                 </svg>
             </a>
         </div>
-    </div>
-    <div class="col-md-6">
-        <img src="/assets/developer.svg" alt="Anuraj.Dev" class="img-fluid ms-1" />
     </div>
 </div>
