Updated the text size

--- a/book.html
+++ b/book.html
@@ -14,7 +14,7 @@ title: Book
                 A Developer's Guide to .NET in Azure
             </a>
         </h2>
-        <p>
+        <p class="lead">
             Create cloud-native .NET applications using cutting-edge technologies. Design, develop, and deploy scalable,
             manageable, and resilient apps with various Azure services. Explore serverless architecture and optimize
             application scalability through efficient design. Purchase of the print or Kindle book includes a free PDF
