Redirect Page - About

--- a/about.html
+++ b/about.html
@@ -1,28 +1,4 @@
 ---
-layout: page
-title: About
+permalink: /a
+redirect_to: 'https://github.com/anuraj'
 ---
-
-<div class="row">
-    <div class="col-md-12">
-        <h1>About</h1>
-        <p class="pb-3 lh-lg">
-            <img src="/assets/me.png" class="img-fluid float-end rounded-circle img-thumbnail" alt="Anuraj Profile" />
-            I am a seasoned software architect with over 18 years of experience in designing and developing enterprise
-            applications. Currently, I hold the position of Chief Product Architect for Socxo and Socxly, where my
-            responsibilities include designing, architecting, and developing SaaS solutions for advocacy and digital
-            marketing. I am a technology enthusiast, an early adopter, and a passionate architect with extensive
-            experience in building and managing software products across social, web, mobile, desktop, and cloud
-            platforms.
-
-            Before joining Socxo, I played a crucial role in Suyati Technologies as part of the CTO team, leading Cloud
-            and Azure Centers of Excellence. I am proud to be recognized as a seven-time Microsoft MVP and hold various
-            certifications, including Microsoft Certified Azure Developer, Microsoft Certified Azure AI Associate, and
-            Certified Scrum Master. In addition to being a mentor and public speaker, I am actively involved in research
-            and development, focusing on architecture, cloud computing, and DevOps.
-
-            As a core member of K-MUG (Kerala Microsoft Users Group), I take a leadership role in the Azure Developer
-            Community Kochi. For the latest updates, you can follow me on Twitter at @anuraj.
-        </p>
-    </div>
-</div>
