--- a/book.html
+++ b/book.html
@@ -1,6 +1,8 @@
 ---
-layout: default
-title: Book
+layout: page
+title: A Developer's Guide to .NET in Azure
+subtitle: Build quick, scalable cloud-native applications and microservices with .NET 6.0 and Azure.
+permalink: /book/
 ---
 
 <div class="row">
@@ -8,12 +10,6 @@ title: Book
         <img src="/assets/book-cover.png" alt="Book Cover" class="img-fluid" />
     </div>
     <div class="col-md-6">
-        <h2 class="display-6 mb-3">
-            <a class="text-body-emphasis text-decoration-none" rel="noopener" target="_blank"
-                href="https://via.anuraj.dev/book">
-                A Developer's Guide to .NET in Azure
-            </a>
-        </h2>
         <p class="lead">
             Create cloud-native .NET applications using cutting-edge technologies. Design, develop, and deploy scalable,
             manageable, and resilient apps with various Azure services. Explore serverless architecture and optimize
