--- a/contact.html
+++ b/contact.html
@@ -1,37 +1,29 @@
 ---
 layout: page
 title: Contact
+subtitle: Please use the form below to contact me.
+permalink: /contact/
 ---
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <h1>Contact</h1>
-            <p class="lead">Please use the form below to contact me.</p>
-        </div>
+<form method="post" id="contact-form" class="needs-validation" novalidate>
+    <div class="mb-3">
+        <label class="form-label" for="name">Name</label>
+        <input class="form-control" type="text" name="name" id="name" required>
     </div>
-    <div class="row">
-        <form method="post" id="contact-form" class="needs-validation" novalidate>
-            <div class="mb-3">
-                <label class="form-label" for="name">Name</label>
-                <input class="form-control" type="text" name="name" id="name" required>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="email">Email</label>
-                <input class="form-control" type="email" name="email" id="email" required>
-            </div>
-            <div class="mb-3">
-                <label class="form-label" for="email">Message</label>
-                <textarea class="form-control" name="message" id="message" rows="5" required></textarea>
-            </div>
-            <div class="mb-3">
-                <button type="submit" class="btn btn-primary g-recaptcha"
-                    data-sitekey="6Lfi90EpAAAAAP1GeTj2yXt4HiAhKDIfJHjaZEVg" data-callback='onSubmit'
-                    data-action='submit'>Submit</button>
-            </div>
-        </form>
+    <div class="mb-3">
+        <label class="form-label" for="email">Email</label>
+        <input class="form-control" type="email" name="email" id="email" required>
     </div>
-</div>
+    <div class="mb-3">
+        <label class="form-label" for="email">Message</label>
+        <textarea class="form-control" name="message" id="message" rows="5" required></textarea>
+    </div>
+    <div class="mb-3">
+        <button type="submit" class="btn btn-primary g-recaptcha"
+            data-sitekey="6Lfi90EpAAAAAP1GeTj2yXt4HiAhKDIfJHjaZEVg" data-callback='onSubmit'
+            data-action='submit'>Submit</button>
+    </div>
+</form>
 
 {% if jekyll.environment == "development" %}
 <script>
