Updated the YAML

--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Privacy Policy
-subtitle: Last updated: January 11, 2024
+subtitle: Last updated - January 11, 2024
 permalink: /privacypolicy/
 ---
 
