--- a/speed-test.html
+++ b/speed-test.html
@@ -5,5 +5,5 @@ subtitle: Check your internet speed
 permalink: /speed-test/
 ---
 
-<div id="web-widget-container" style="width:1200px;height:700px;"></div>
-<script src="https://hsi-speed-test.stage.clear.link/speed-test-widget/script-4.min.js"></script>
+<div id="web-widget-container"></div>
+<script src="https://hsi-speed-test.stage.clear.link/speed-test/widget/script-98.js"></script>
