--- a/speed-test.html
+++ b/speed-test.html
@@ -5,5 +5,5 @@ subtitle: Check your internet speed
 permalink: /speed-test/
 ---
 
-<div id="web-widget-container" style="width:100%;height:500px;"></div>
+<div id="web-widget-container" style="height:600px;"></div>
 <script src="https://hsi-speed-test.stage.clear.link/speed-test/widget/script-98.js"></script>
