Updated the about page

--- a/about.html
+++ b/about.html
@@ -5,12 +5,14 @@ subtitle: About Anuraj
 permalink: /about/
 ---
 
-Anuraj is a Senior Software Architect and Microsoft Most Valuable Professional (MVP) with over 22 years of experience in designing and delivering robust, scalable enterprise solutions. He specializes in .NET and Microsoft Azure, with a strong focus on cloud-native architecture, clean code, and DevOps practices.
+<div class="lead">
+    Anuraj is a Senior Software Architect and Microsoft Most Valuable Professional (MVP) with over 22 years of experience in designing and delivering robust, scalable enterprise solutions. He specializes in .NET and Microsoft Azure, with a strong focus on cloud-native architecture, clean code, and DevOps practices.
 
-He is the author of <a href="https://via.anuraj.dev/book" target="_blank">A Developer's Guide to .NET in Azure (Packt Publishing)</a>, written to help developers harness the power of Azure for modern application development. Anuraj is also passionate about emerging technologies and is actively exploring how Artificial Intelligence and Machine Learning can be integrated into enterprise systems to build smarter, more adaptive applications.
+    He is the author of <a href="https://via.anuraj.dev/book" target="_blank">A Developer's Guide to .NET in Azure (Packt Publishing)</a>, written to help developers harness the power of Azure for modern application development. Anuraj is also passionate about emerging technologies and is actively exploring how Artificial Intelligence and Machine Learning can be integrated into enterprise systems to build smarter, more adaptive applications.
 
-This blog reflects his personal journey—sharing insights, architectural strategies, and real-world solutions to help fellow developers and architects grow and innovate.
+    This blog reflects his personal journey—sharing insights, architectural strategies, and real-world solutions to help fellow developers and architects grow and innovate.
 
-<blockquote>Disclaimer: The views and opinions expressed here are solely my own and do not represent those of my employer.</blockquote>
+    <blockquote>Disclaimer: The views and opinions expressed here are solely my own and do not represent those of my employer.</blockquote>
 
-If you find the content helpful and would like to support my work, you can <a href="https://www.buymeacoffee.com/anuraj.dev" target="_blank">Buy Me a Coffee</a>.
+    If you find the content helpful and would like to support my work, you can <a href="https://www.buymeacoffee.com/anuraj.dev" target="_blank">Buy Me a Coffee</a>
+</div>
