--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@ title: Home Page
         <p class="lead pb-3 lh-lg">
             I've authored a book titled <a rel="noopener" target="_blank" href="https://via.anuraj.dev/book">A
                 Developer's
-                Guide to .NET in Azure</a> published by Packt Publishing. Presently, I serve as the Chief Technology
-            Officer at <a rel="noopener" target="_blank" href="https://socxo.com">Socxo Solutions Pvt.
-                Ltd</a>.
+                Guide to .NET in Azure</a> published by Packt Publishing.
         </p>
         <p>
 
